<resources>
    <string name="app_name">Inventory Snapshot</string>
    <string name="item_id_label">Id</string>
    <string name="item_name_label">Name</string>
    <string name="item_qty_label">Quantity</string>
    <string name="item_price_label">Price</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="save_item">Save</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="setting_item">Settings</string>
    <string name="account_item">Account</string>
    <string name="about_item">About</string>
    <string name="help_item">Help</string>
    <string name="nav_options">Options</string>
    <string name="search">Search</string>
    <string name="item_qty_label_short">Qty:</string>
    <string name="search_query_hint">Search Here</string>
    <string name="dialog_ok" />
    <string name="dialog_cancel" />
    <string-array name="options">
        <item>Settings</item>
        <item>About</item>
        <item>Help</item>
        <item>Log</item>
    </string-array>
    <string-array name="options_icons">
        <item>@drawable/ic_solved</item>
        <item>@android:drawable/ic_menu_help</item>
        <item>@android:drawable/ic_menu_info_details</item>
        <item>@android:drawable/ic_menu_sort_by_size</item>
    </string-array>
    <string name="help_app">
        <b>Contact Me:\n</b>
        iskomtdev@gmail.com
    </string>
    <string name="log_app">
        <b><p>5/1/2019:\n</p></b><br />
        <p>App Created\n\n</p><br />

        <b><p>5/1/2019:\n</p></b><br />
        <p>App Created\n\n</p><br />
    </string>
    <string name="item_name_asc">Name(Ascending)</string>
    <string name="item_name_desc">Name(Descending)</string>
    <string name="item_qty_asc">Quantity(Ascending)</string>
    <string name="item_qty_desc">Quantity(Descending)</string>
    <string name="item_price_asc">Price(Ascending)</string>
    <string name="item_price_desc">Price(Descending)</string>
    <string name="item_added">Added</string>
    <string name="main_menu_sort">Sort by</string>
</resources>