<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/setting_item"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/main_menu_account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/account_item" />
    <item
        android:id="@+id/main_menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about_item" />
    <item
        android:id="@+id/main_menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help_item" />
</menu>